# koppen

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml
.github/workflows.backup/: ci-cd.yml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/app/: App.tsx  PrivateRoute.tsx  appRoutes.ts
frontend/src/entities/Forecasts/: Forecast.ts  useDownloadForecasts.ts  useForecastHistory.ts  useForecasts.ts
frontend/src/entities/WindFarm/: WindFarm.ts  useCRUDForTurbine.ts  useCRUDForWindFarm.ts  useCreateFarm.ts  useCreateOrDeleteForecast.ts  (+2 more)
frontend/src/shared/: store.tsx
koppen/: celery.py  celery_app.py  database.py  fastapi.db  main.py
koppen/admin/views/: forecast.py  user.py  wind_energy_unit.py
koppen/alembic/: README  env.py
koppen/alembic/versions/: 01_first_migration.py  03_add_forecasts_email_recipients.py  04_update_forecast_model.py  05_add_forecast_history_model.py  06_add_forecast_history_modell.py  46206b43f144_add_forecast_model_and_link_to_wind_farm.py
koppen/api/: routers.py
koppen/api/endpoints/: __init__.py  auth.py  forecast.py  wind_energy_unit.py
koppen/api_clients/: open_meteo.py
koppen/core/: auth.py  base.py  config.py  db.py
koppen/forecasting/: service.py
koppen/models/: __init__.py  forecast.py  user.py  wind_energy_unit.py
koppen/schemas/: forecasts.py  user.py  wind_energy_unit.py
koppen/utils/: email_utils.py
tests/: test_main.py
(+38 files in other folders)
