[project]
name = "koppen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "windpowerlib>=0.2.2",
    "sqladmin>=0.20.1",
    "pydantic-settings>=2.10.1",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.12.13",
    "aiohttp-client-cache>=0.13.0",
    "tenacity>=9.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "aiosmtplib>=4.0.1",
]

[tool.ruff]
exclude = [
    ".venv",
    "alembic/*",
    "koppen/alembic/*"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["koppen"]
